# Game-Engine-2D

./: CMakeLists.txt  README.md  UI.cpp  UI.h  UserInterface.cpp  UserInterface.h  engine_state.h  handleInput.cpp  handleInput.h  logic.cpp  logic.h  main.cpp  view  window.cpp  window.h  world.cpp  world.h
UserInterface/: Interface.h  PauseUI.cpp  PauseUI.h  UserInterface.cpp  UserInterface.h
asset_manager/: asset_manager.cpp  asset_manager.h
fonts/: font12.c  font8.c  fonts.h
